lesson-12/deploy-svc-app-latest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber
  labels:
    app: kuber
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
      - name: kuber-k8sphp
        image: vladbuk/k8sphp
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
spec:
  selector:
    app: http-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080 # port-range: 30000-32767
  type: NodePort
