lesson-12/deploy-svc-app-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-v1
  labels:
    app: kuber-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server-v1
  template:
    metadata:
      labels:
        app: http-server-v1
    spec:
      containers:
      - name: kuber-k8sphp
        image: vladbuk/k8sphp:0.1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "25m"
          limits:
            memory: "128Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-v1
spec:
  selector:
    app: http-server-v1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      #nodePort: 30090 # port-range: 30000-32767
  type: NodePort
