lesson-12/deploy-svc-app-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-v2
  labels:
    app: kuber-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server-v2
  template:
    metadata:
      labels:
        app: http-server-v2
    spec:
      containers:
      - name: kuber-k8sphp
        image: vladbuk/k8sphp:0.2
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "25m"
          limits:
            memory: "128Mi"
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-v2
spec:
  selector:
    app: http-server-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30020 # port-range: 30000-32767
  type: NodePort
