lesson-12/deploy-svc-app-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuber-v3
  labels:
    app: kuber-v3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server-v3
  template:
    metadata:
      labels:
        app: http-server-v3
    spec:
      containers:
      - name: kuber-k8sphp
        image: vladbuk/k8sphp:0.3
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kuber-service-v3
spec:
  selector:
    app: http-server-v3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30030 # port-range: 30000-32767
  type: NodePort
