lesson-12/ingress-gke.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
   - host: vladbuk.example.com
     http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuber-service
                port: 
                  number: 80
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: kuber-service-v1
                port: 
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: kuber-service-v2
                port: 
                  number: 80
          - path: /v3
            pathType: Prefix
            backend:
              service:
                name: kuber-service-v3
                port: 
                  number: 80
