lesson-12/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  ingressClassName: nginx
  rules:
   - host: vladbuk.tplinkdns.com
     http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuber-service
                port: 
                  number: 80
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: kuber-service-v1
                port: 
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: kuber-service-v2
                port: 
                  number: 80
          - path: /v3
            pathType: Prefix
            backend:
              service:
                name: kuber-service-v3
                port: 
                  number: 80
   - host: app1.example.com
     http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuber-service-v1
                port: 
                  number: 80
   - host: app2.example.com
     http:
        paths:          
          - path: /
            pathType: Exact
            backend:
              service:
                name: kuber-service-v2
                port: 
                  number: 80
   - host: app3.example.com
     http:
        paths:          
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuber-service-v3
                port: 
                  number: 80
